--- a/index.html
+++ b/index.html
@@ -1,1 +1,83 @@
-<h1>hi</h1>
+<!DOCTYPE html>
+ 
+<html lang="en">
+ 
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>About Soohwan Kim</title>
+ 
+        <!--.css 파일에서 가져올려면 이거 적기.-->
+        <link rel = "stylesheet" type="text/css" href="style.css">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@300&display=swap" rel="stylesheet">
+       
+    </head>
+ 
+    <body>
+        <div class="frame">
+            <nav class="navigator">
+                <h3 class="site-name">About Ethan Soohwan Kim</h3>
+                <ul>
+                    <li><a class="nav-menu" href="index.html">INFO</a></li>
+                    <li><a class="nav-menu" href="work.html">WORK</a></li>
+                </ul>
+            </nav>
+ 
+            <div class="dashboard">
+                <h1 class="intro-sentence">Hello! My name is <a class="sample">Soohwan Kim</a> <br>
+                I major <a class="highlight_1">Computer Science</a> graduating in <a class="highlight_2">2024</a></h1>
+                <p class="english-sentence">Motivated computer science student, ready to solve problems, collaborate with peers, and make a difference in our world.</p>
+ 
+            </div>
+ 
+            <div class="profile-section">
+                <img id="profile-picture" src="img/profilePic.jpeg">
+                <div class="introduction">
+                    <h2>SKILLS</h2>
+                    <p id="skills">Python<br>Java<br>C++<br>HTML, CSS, JavaScript<br>Haskell<br>ReactJS<br>Java Server Pages(JSP)<br>SQL</p>
+                    <h2>EDUCATION</h2>
+                    <p id="education-title"><a class="university-link" href="https://www.tamu.edu/" target="_blank" title="Link to University website">Texas A&M University</a> 2020~2024</p>
+                    <p class="education-description">
+                        Bachelor of Science in Computer Science and Engineering<br>
+                        GPA: 3.840
+                    </p>
+                    <p id="education-title">Relevant Courseworks</p>
+                    <p class="education-description">
+                        Discrete Math<br>
+                        General Engineering<br>
+                        Program Design and Concepts<br>
+                        Intro to computing<br>
+                        Data Structures and Algorithms<br>
+ 
+                    </p>
+                    <p id="education-title">Organizations</p>
+                    <p class="education-description">
+                        Texas A&M Computing Society(TACS) - Member
+                    </p>
+                </div>
+            </div>
+ 
+            <h5 class="recent-menu">RECENT Work</h5>
+            <div class="recent-works">
+                <!-- 프로젝트 한거 올리는 칸. -->
+            </div>
+ 
+            <footer class="footer">
+                <h3 class="contact">CONTACT ME</h3>
+                <div class="links">
+                    <a class="instagram-link" href="https://www.instagram.com/rdchk_e/">INSTAGRAM</a>
+                    <h5 class="email">Personal Email: ethankim9091@gmail.com</h3>
+                </div>
+                <p>Feel free to contact me!</p>
+ 
+            </footer>
+        </div>
+        <script src="script.js"></script>
+    </body>
+   
+</html>
+
