--- a/index.html
+++ b/index.html
@@ -8,12 +8,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>About Soohwan Kim</title>
  
-        <!--.css 파일에서 가져올려면 이거 적기.-->
-        <link rel = "stylesheet" type="text/css" href="style.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@300&display=swap" rel="stylesheet">
+        <link rel = "stylesheet" type="text/css" href="style.css">
        
     </head>
  
@@ -28,17 +27,30 @@
             </nav>
  
             <div class="dashboard">
-                <h1 class="intro-sentence">Hello! My name is <a class="sample">Soohwan Kim</a> <br>
-                I major <a class="highlight_1">Computer Science</a> graduating in <a class="highlight_2">2024</a></h1>
-                <p class="english-sentence">Motivated computer science student, ready to solve problems, collaborate with peers, and make a difference in our world.</p>
- 
+                <h1 class="intro-sentence">My name is <a class="sample">Soohwan Kim</a> <br>
+                <a class="highlight_1">Computer Science and Engineering</a> student graduating in <a class="highlight_2">2024</a></h1>
+                <div id="icons">
+                    <a href="https://www.github.com/EthanSKim" target="_blank"><img class="icon" src="img/icons/github-icon.png" width="30" height="30" /></a>
+                    <a href="https://www.linkedin.com/in/soohwan-kim-8724801bb/" target="_blank"><img class="icon" src="img/icons/linkedin-icon.png" width="30" height="30" /></a>
+                    <a href="https://www.instagram.com/ttekerlook/" target="_blank"><img class="icon" src="img/icons/instagram-icon.png" width="30" height="30" /></a>
+                </div>
             </div>
  
             <div class="profile-section">
                 <img id="profile-picture" src="img/profilePic.jpeg">
                 <div class="introduction">
                     <h2>SKILLS</h2>
-                    <p id="skills">Python<br>Java<br>C++<br>HTML, CSS, JavaScript<br>Haskell<br>ReactJS<br>Java Server Pages(JSP)<br>SQL</p>
+                    <table id="skills">
+                        <tr><td>HTML, CSS, JavaScript</td><td><meter min="0" max="100" low="25" high="75" optimum="80" value="90">90</meter></td></tr>
+                        <tr><td>ReactJS</td><td><meter min="0" max="100" low="25" high="75" optimum="80" value="90">90</meter></td></tr>
+                        <tr><td>React Native</td><td><meter min="0" max="100" low="25" high="75" optimum="80" value="75">75</meter></td></tr>
+                        <tr><td>Java</td><td><meter min="0" max="100" low="25" high="75" optimum="80" value="60">60</meter></td></tr>
+                        <tr><td>C++</td><td><meter min="0" max="100" low="25" high="75" optimum="80" value="60">60</meter></td></tr>
+                        <tr><td>Python</td><td><meter min="0" max="100" low="25" high="75" optimum="80" value="50">50</meter></td></tr>
+                        <tr><td>Haskell</td><td><meter min="0" max="100" low="25" high="75" optimum="80" value="20">20</meter></td></tr>
+                        <tr><td>Java Server Pages(JSP)</td><td><meter min="0" max="100" low="25" high="75" optimum="80" value="20">20</meter></td></tr>
+                        <tr><td>SQL</td><td><meter min="0" max="100" low="25" high="75" optimum="80" value="20">20</meter></td></tr>
+                        </table>
                     <h2>EDUCATION</h2>
                     <p id="education-title"><a class="university-link" href="https://www.tamu.edu/" target="_blank" title="Link to University website">Texas A&M University</a> 2020~2024</p>
                     <p class="education-description">
@@ -63,17 +75,19 @@
  
             <h5 class="recent-menu">RECENT Work</h5>
             <div class="recent-works">
-                <!-- 프로젝트 한거 올리는 칸. -->
+                
             </div>
  
             <footer class="footer">
                 <h3 class="contact">CONTACT ME</h3>
                 <div class="links">
-                    <a class="instagram-link" href="https://www.instagram.com/rdchk_e/">INSTAGRAM</a>
-                    <h5 class="email">Personal Email: ethankim9091@gmail.com</h3>
+                    <a class="github-link" href="https://www.github.com/EthanSKim">GITHUB</a>
+                    <a class="github-link" href="https://www.linkedin.com/in/soohwan-kim-8724801bb/">LINKEDIN</a>
+                    <a class="github-link" href="https://www.instagram.com/ttekerlook/">INSTAGRAM</a>
+                    <a class="email" href="mailto:ethankim9091@gmail.com">Personal Email: ethankim9091@gmail.com</a>
+                    <a class="phone-number" href="tel:512-566-9091">Phone: 512-566-9091</a>
                 </div>
                 <p>Feel free to contact me!</p>
- 
             </footer>
         </div>
         <script src="script.js"></script>
