--- a/work.html
+++ b/work.html
@@ -37,7 +37,7 @@
                     <div>
                         <p>&emsp;This is my first javascript project. When I first tried to learn javascript, I was focused on only the theories of javascript. 
                           Studying by taking notes, and memorizing javascript concepts only showed me how complex javascript is rather than showing me the purpose of using this language.
-                          But I could not give up as I thought javascript was a step that I must take in order to move forward towards my future career. I decided to try project-based learning and
+                          But I could not give up as I thought javascript was a step that I must take in order to move forward towards my future career. I decided to try <strong>project-based learning</strong> and
                           searched for javascript projects online. I clone coded this simple tetris game by typing each code and understanding it as I went through. To test myself if 
                           I fully understand my code, I added more features to the game such as pause, hold block, and show next block. Adding hold block function was easy as all I had to do was 
                           erase current moving block and re-rendering it to hold box when a button was pressed. However, adding a function to show the next block required me to go through my
@@ -47,7 +47,8 @@
                           to fully understand what I programmed.
                         </p>
                     </div>
-                    <a class="project-link" href="#" target="_blank">Tetrs-Game - Github</a>
+                    <a class="project-link" href="https://github.com/EthanSKim/Tetris-Game" target="_blank">Tetrs-Game - Github</a>
+                    <a class="project-link" href="https://ethanskim.github.io/Tetris-Game/" target="_blank">Tetris-Game - Site</a>
                 </div>
               </div>
             </div>
@@ -59,11 +60,15 @@
               </h2>
               <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
                 <div class="accordion-body d-flex flex-column align-items-center">
-                  <img src="img/projectImg/movie-app/movie-app-screen.png" width="906"/>
-                  <img src="img/projectImg/movie-app//movie-app-screen2.png" width="906"/>
+                  <div>
+                    <img src="img/projectImg/movie-app/movie-app-screen.png" width="560"/>
+                    <img src="img/projectImg/movie-app//movie-app-screen2.png" width="560"/>
+                  </div>
                   <div>
                     <p>hi</p>
                   </div>
+                  <a class="project-link" href="https://github.com/EthanSKim/MovieChart" target="_blank">Movie Chart - Github</a>
+                  <a class="project-link" href="https://ethanskim.github.io/MovieChart/" target="_blank">Movie Chart - Site</a>
                 </div>
               </div>
             </div>
