--- a/work.html
+++ b/work.html
@@ -28,7 +28,7 @@
             <div class="accordion-item">
               <h2 class="accordion-header" id="panelsStayOpen-headingOne">
                 <button class="accordion-button collapsed" type="button" style="font-family: 'Montserrat', sans-serif;" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="false" aria-controls="panelsStayOpen-collapseOne">
-                  Tetris Game [JavaScript Practice] (05/22 ~ 06/22)
+                  Tetris Game [JavaScript Practice] &emsp; <img src="img/icons/JS-icon.png" width="25"/> &emsp; (05/22 ~ 06/22)
                 </button>
               </h2>
               <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingOne">
@@ -55,7 +55,7 @@
             <div class="accordion-item">
               <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
-                  Movie Chart App [React JS Practice] (06/22)
+                  Movie Chart App [React JS Practice] &emsp; <img class="react-icon" src="img/icons/react-icon.png" width="25"/> &emsp; (06/22)
                 </button>
               </h2>
               <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
@@ -81,7 +81,7 @@
             <div class="accordion-item">
               <h2 class="accordion-header" id="panelsStayOpen-headingThree">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
-                  Weather Mobile App [React Native Practice] (06/22 ~ 07/22)
+                  Weather Mobile App [React Native Practice] &emsp; <img class="react-icon" src="img/icons/react-icon.png" width="25"/> &emsp; (06/22 ~ 07/22)
                 </button>
               </h2>
               <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree">
@@ -107,7 +107,7 @@
             <div class="accordion-item">
               <h2 class="accordion-header" id="panelsStayOpen-headingFour">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseFour" aria-expanded="false" aria-controls="panelsStayOpen-collapseFour">
-                  Work Travel Hard Mobile App [React Native Practice] (07/22)
+                  Work Travel Hard Mobile App [React Native Practice] &emsp; <img class="react-icon" src="img/icons/react-icon.png" width="25"/> &emsp; (07/22)
                 </button>
               </h2>
               <div id="panelsStayOpen-collapseFour" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingFour">
