--- a/work.html
+++ b/work.html
@@ -28,7 +28,7 @@
             <div class="accordion-item">
               <h2 class="accordion-header" id="panelsStayOpen-headingOne">
                 <button class="accordion-button collapsed" type="button" style="font-family: 'Montserrat', sans-serif;" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="false" aria-controls="panelsStayOpen-collapseOne">
-                  Tetris Game [JavaScript Practice] &emsp; <img src="img/icons/JS-icon.png" width="25"/> &emsp; (05/22 ~ 06/22)
+                  Tetris Game [JavaScript Practice]&ensp;<img src="img/icons/JS-icon.png" width="25"/> &ensp;(05/22 ~ 06/22)
                 </button>
               </h2>
               <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingOne">
@@ -55,7 +55,7 @@
             <div class="accordion-item">
               <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
-                  Movie Chart App [React JS Practice] &emsp; <img class="react-icon" src="img/icons/react-icon.png" width="25"/> &emsp; (06/22)
+                  Movie Chart App [React JS Practice]&ensp; <img class="react-icon" src="img/icons/react-icon.png" width="25"/> &ensp;(06/22)
                 </button>
               </h2>
               <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
@@ -81,7 +81,7 @@
             <div class="accordion-item">
               <h2 class="accordion-header" id="panelsStayOpen-headingThree">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
-                  Weather Mobile App [React Native Practice] &emsp; <img class="react-icon" src="img/icons/react-icon.png" width="25"/> &emsp; (06/22 ~ 07/22)
+                  Weather Mobile App [React Native Practice]&ensp; <img class="react-icon" src="img/icons/react-icon.png" width="25"/> &ensp;(06/22 ~ 07/22)
                 </button>
               </h2>
               <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree">
@@ -107,7 +107,7 @@
             <div class="accordion-item">
               <h2 class="accordion-header" id="panelsStayOpen-headingFour">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseFour" aria-expanded="false" aria-controls="panelsStayOpen-collapseFour">
-                  Work Travel Hard Mobile App [React Native Practice] &emsp; <img class="react-icon" src="img/icons/react-icon.png" width="25"/> &emsp; (07/22)
+                  Work Travel Hard Mobile App [React Native Practice]&ensp; <img class="react-icon" src="img/icons/react-icon.png" width="25"/> &ensp;(07/22)
                 </button>
               </h2>
               <div id="panelsStayOpen-collapseFour" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingFour">
@@ -136,15 +136,6 @@
           </div>
  
           <footer class="footer">
-            <h3 class="contact">CONTACT ME</h3>
-            <div class="links">
-                <a class="github-link" href="https://www.github.com/EthanSKim">GITHUB</a>
-                <a class="github-link" href="https://www.linkedin.com/in/soohwan-kim-8724801bb/">LINKEDIN</a>
-                <a class="github-link" href="https://www.instagram.com/ttekerlook/">INSTAGRAM</a>
-                <a class="email" href="mailto:ethankim9091@gmail.com">Personal Email: ethankim9091@gmail.com</a>
-                <a class="phone-number" href="tel:512-566-9091">Phone: 512-566-9091</a>
-            </div>
-            <p>Feel free to contact me!</p>
         </footer>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>    </div>
 </body>
