Added recent works

--- a/index.html
+++ b/index.html
@@ -83,6 +83,14 @@
                                 </div>
                             </div>
                             <div class="skill-box">
+                                <span class="title">Node.JS</span>
+                                <div class="skill-bar">
+                                    <span class="skill-per nodejs">
+                                        <span class="tooltip">60%</span>
+                                    </span>
+                                </div>
+                            </div>
+                            <div class="skill-box">
                                 <span class="title">Python</span>
                                 <div class="skill-bar">
                                     <span class="skill-per python">
@@ -131,6 +139,17 @@
  
             <h5 class="recent-menu">RECENT Work</h5>
             <div class="recent-works">
+                <!--Recent works-->
+                <div id="recent-img">
+                    <img src="img/projectImg/zoom-clone/zoom-screen4.png" alt="Zoom Clone" width="700" style="border-radius: 30px;">
+                    <img src="img/projectImg/zoom-clone/zoom-screen5.png" alt="Zoom Clone" width="700" style="border-radius: 30px;">
+                </div>
+                <div id="recent-sentence">
+                    <h1>Zoom Clone</h1>
+                    <h4 style="color: rgba(0,0,0,0.6);">Check out my latest projects!</h4>
+                    <a href="work.html"><img id="arrowImg" src="img/arrow.png" alt="arrowToRight" width="100"></a>
+                    
+                </div>
             </div>
  
             <footer class="footer">
