--- a/work.html
+++ b/work.html
@@ -133,6 +133,38 @@
                 </div>
               </div>
             </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="panelsStayOpen-headingFive">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseFive" aria-expanded="false" aria-controls="panelsStayOpen-collapseFive">
+                  Zoom Clone [Node.JS SocketIO WebRTC practice]&ensp; <img src="img/icons/node-icon.png" width="35"/> &ensp; <img src="img/icons/socketio-icon.png" width="35"/> &ensp; <img src="img/icons/webrtc-icon.png" width="25"/> &ensp; (07/22 ~ 08/22)
+                </button>
+              </h2>
+              <div id="panelsStayOpen-collapseFive" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingFive">
+                <div class="accordion-body d-flex flex-column align-items-center">
+                  <div>
+                    <img src="img/projectImg/zoom-clone/zoom-screen.png" height="350" alt="Zoom Clone" />
+                    <img src="img/projectImg/zoom-clone/zoom-screen2.png" height="350" alt="Zoom Clone" />
+                  </div>
+                  <div>
+                    <img src="img/projectImg/zoom-clone/zoom-screen3.png" height="350" alt="Zoom Clone" />
+                    <img src="img/projectImg/zoom-clone/zoom-screen4.png" height="350" alt="Zoom Clone" />
+                  </div>
+                  <img src="img/projectImg/zoom-clone/zoom-screen5.png" height="400" alt="Zoom Clone" />
+                  <div>
+                    <p>
+                      &emsp;This is my first back-end project. While I was studying frond-end web development, I came across to a useful web development tool called node.js.
+                      Node.js really caught my attention when I learned that it helps us run javascript outside of browsers. It meant that I can develop back-ends
+                      with javascript, which was the language that I became very familiar to recently. I decided to create a real-time chat app using SocketIO and WebRTC.
+                      I learned to work with express, emitting with socketio, and peer to peer connection with WebRTC. The peer to peer connection only worked on
+                      devices that knows each other's ip address. I went on to solve this problem by using stun servers to provide the users' ip address. I tested
+                      the video stream with my friend who lives in a different city, and it worked perfectly on her phone.
+
+                    </p>
+                  </div>
+                  <a class="project-link" href="https://github.com/EthanSKim/Real-Time-Video-Chat" target="_blank">Zoome-Clone - Github</a>
+                </div>
+              </div>
+            </div>
           </div>
  
           <footer class="footer">
