relevant coursework edit

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                                 <span class="title">SQL</span>
                                 <div class="skill-bar">
                                     <span class="skill-per sql">
-                                        <span class="tooltip">20%</span>
+                                        <span class="tooltip">80%</span>
                                     </span>
                                 </div>
                             </div>
@@ -119,14 +119,13 @@
                     <p id="education-title"><a class="university-link" href="https://www.tamu.edu/" target="_blank" title="Link to University website">Texas A&M University</a> 2020~2024</p>
                     <p class="education-description">
                         Bachelor of Science in Computer Science and Engineering<br>
-                        GPA: 3.840
+                        GPA: 3.78
                     </p>
                     <p id="education-title">Relevant Courseworks</p>
                     <p class="education-description">
-                        Discrete Math<br>
-                        General Engineering<br>
-                        Program Design and Concepts<br>
-                        Intro to computing<br>
+                        Computer Organizations<br>
+                        Computer Systems<br>
+                        Software Engineering<br>
                         Data Structures and Algorithms<br>
  
                     </p>
