--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <h2>SKILLS</h2>
                         <div class="skills">
                             <div class="skill-box">
-                                <span class="title">HTML, CSS, JavaScript</span>
+                                <span class="title">HTML, CSS, Javascript, Typescript</span>
                                 <div class="skill-bar">
                                     <span class="skill-per html">
                                         <span class="tooltip">90%</span>
