added PillPal project

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                                 </div>
                             </div>
                             <div class="skill-box">
-                                <span class="title">React.JS</span>
+                                <span class="title">React.JS | Next.JS</span>
                     
                                 <div class="skill-bar">
                                     <span class="skill-per reactjs">
@@ -119,19 +119,20 @@
                     <p id="education-title"><a class="university-link" href="https://www.tamu.edu/" target="_blank" title="Link to University website">Texas A&M University</a> 2020~2024</p>
                     <p class="education-description">
                         Bachelor of Science in Computer Science and Engineering<br>
-                        GPA: 3.78
+                        GPA: 3.72
                     </p>
                     <p id="education-title">Relevant Courseworks</p>
                     <p class="education-description">
-                        Computer Organizations<br>
                         Computer Systems<br>
+                        Operating Systems<br>
+                        Database Systems<br>
                         Software Engineering<br>
                         Data Structures and Algorithms<br>
  
                     </p>
-                    <p id="education-title">Organizations</p>
+                    <p id="education-title">Research</p>
                     <p class="education-description">
-                        Texas A&M Computing Society(TACS) - Member
+                        Solver: static analysis on Solana - (<a href="https://engineering.tamu.edu/cse/profiles/huang-jeff.html" target="_blank" title="Research advisor">Jeff Huang</a>)
                     </p>
                 </div>
             </div>
@@ -140,11 +141,10 @@
             <div class="recent-works">
                 <!--Recent works-->
                 <div id="recent-img">
-                    <img src="img/projectImg/zoom-clone/zoom-screen4.png" alt="Zoom Clone" width="700" style="border-radius: 30px;">
-                    <img src="img/projectImg/zoom-clone/zoom-screen5.png" alt="Zoom Clone" width="700" style="border-radius: 30px;">
+                    <img src="img/projectImg/pillpal/pillpal-screen5.jpeg" alt="PillPal" width="700" style="border-radius: 30px;">
                 </div>
                 <div id="recent-sentence">
-                    <h1>Zoom Clone</h1>
+                    <h1>PillPal (TAMUHack 2023)</h1>
                     <h4 style="color: rgba(0,0,0,0.6);">Check out my latest projects!</h4>
                     <a href="work.html"><img id="arrowImg" src="img/arrow.png" alt="arrowToRight" width="100"></a>
                     
