--- a/work.html
+++ b/work.html
@@ -165,6 +165,32 @@
                 </div>
               </div>
             </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="panelsStayOpen-headingSix">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseSix" aria-expanded="false" aria-controls="panelsStayOpen-collapseSix">
+                  PillPal [TAMUhack 2023 Hackathon]&ensp; <img src="img/icons/node-icon.png" width="35"/> &ensp; <img src="img/icons/nextjs-icon.png" width="25"/> &ensp; <img src="img/icons/mongodb-icon.png" width="35"/> &ensp; (01/28/23 ~ 01/29/23)
+                </button>
+              </h2>
+              <div id="panelsStayOpen-collapseSix" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingSix">
+                <div class="accordion-body d-flex flex-column align-items-center">
+                  <img src="img/projectImg/pillpal/pillpal-screen1.png" height="350" alt="Zoom Clone" />
+                  <img src="img/projectImg/pillpal/pillpal-screen2.png" height="350" alt="Zoom Clone" />
+                  <img src="img/projectImg/pillpal/pillpal-screen3.png" height="350" alt="Zoom Clone" />
+                  <img src="img/projectImg/pillpal/pillpal-screen4.jpeg" height="350" alt="Zoom Clone" />
+                  <div>
+                    <img src="img/projectImg/pillpal/pillpal-screen5.jpeg" height="350" alt="Zoom Clone" />
+                    <img src="img/projectImg/pillpal/pillpal-screen6.jpeg" height="350" alt="Zoom Clone" />
+                  </div>
+                  <div>
+                    <p>
+                      &emsp;This is my first hackathon. TAMUHack is a one of the biggest hackathon in Texas, hosted by Texas A&M University. Over 150 teams attended this event, and I met people from Dallas, Austin, Houston, and San Antonio. I attended this event alone, hoping to find a decent teammate. I was able to form a team with three other hackers, just right before the hacking began. Among various interesting challenges that the sponsoring companies presented, we decided to hack under the topic "Envision the best technology-enabled patient safety solution that has the potential to avert patient harm and save lives." We set our goal to ensure that people who are prescribed medication know how, when, and why they are taking it. We understood that many people are at high risk of misunderstanding doctors or information about the medication. Our product PillPal is a web application that holds all of patient's diagnosises, treatment plans, and medications in a single easy-to-use place. It provides not only their medication and its dosage, but also specific description of the medication and why they are taking it with a doctors note. Our team utilized Next.js and Axios for front-end, Node.js and MongoDB for back-end. Our team unexpectedly recieved 2nd place in the topic, and the company came to our table after judging saying that they were very impressed. This hackathon was a very precious and valuable experience for me, and I will definitely look for cool hackathons to attend in the future.
+                    </p>
+                  </div>
+                  <a class="project-link" href="https://github.com/EthanSKim/TAMUHACK2023" target="_blank">PillPal - Github</a>
+                  <a class="project-link" href="https://devpost.com/software/pillpal-laj5bk" target="_blank">PillPal - DevPost</a>
+                </div>
+              </div>
+            </div>
           </div>
  
           <footer class="footer">
